Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8212883
Setting a double manageable flag with jcmd/jinfo crashes the JVM
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
12
Affects Version/s:
12
Component/s:
hotspot
Labels:
None
Subcomponent:
runtime
Resolved In Build:
b19
Description
As the summary says. The case of double manageable flags doesn't seem to be handled in the WriteableFlags class. This might be because there are currently no double manageable flags in HotSpot.
Attachments
Activity
People
Assignee:
Tony Printezis
Reporter:
Tony Printezis
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2018-10-23 13:41
Updated:
2019-05-28 15:18
Resolved:
2018-11-05 11:05