8212883: Setting a double manageable flag with jcmd/jinfo crashes the JVM

Reviewed-by: dholmes, gziemski, stuefe